[gd_scene load_steps=7 format=2]

[ext_resource path="res://Code/SceneScripts/Features/Feature_ObjRayCast.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.004, 0.004, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true

[sub_resource type="SphereMesh" id=3]
radius = 0.01
height = 0.02

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_fixed_size = true

[sub_resource type="SphereShape" id=5]
radius = 0.236783

[node name="Feature_ObjRayCast" type="Spatial"]
script = ExtResource( 1 )

[node name="RayCastPosition" type="Spatial" parent="."]

[node name="RayCast" type="RayCast" parent="RayCastPosition"]
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="RayCastMesh" type="MeshInstance" parent="RayCastPosition"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="RayCastHitMarker" type="MeshInstance" parent="RayCastPosition"]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="GrabArea" type="Area" parent="RayCastPosition/RayCastHitMarker"]

[node name="CollisionShape" type="CollisionShape" parent="RayCastPosition/RayCastHitMarker/GrabArea"]
shape = SubResource( 5 )

[connection signal="body_entered" from="RayCastPosition/RayCastHitMarker/GrabArea" to="." method="_on_GrabArea_body_entered"]
[connection signal="body_exited" from="RayCastPosition/RayCastHitMarker/GrabArea" to="." method="_on_GrabArea_body_exited"]
